# cplusplus

./: .gitignore  00-helloWord.cpp  01-types-variables.cpp  02-string.cpp  03-constants.cpp  05-io.cpp  06-namespaces.cpp  06-rangeBasedLoop.cpp  07-functions-templates.cpp  07-functions.cpp  08-array.cpp  10-pointer-to-functions.cpp  cmake-cheatsheet.md  main.c  readme.md
00-c-programing/: 01-const-char-star.c  02-const-char-star.c  Makefile  readme.md  restrict.c  restrict.s
00-cpp-programming/: 01-multiset-multimap-size.cpp  02-multimap-modify-key.cpp  03-string-c_str.cpp  04-emplace-vs-push.md  Makefile
00-cpp-programming/01-bitset/: Makefile  main.cpp  readme.md
01-apue/: readme.md
01-apue/03-file-IO/: 3.11-file-status-flags.c  Makefile  flock.h  readme.md
01-apue/08-process-control/: 1.txt  2.txt  8-1.fork-1  8-1.fork-1.c  8-1.fork-2  8-1.fork-2.c  8.6-exit-status  8.6-exit-status.c  8.8-waitpid-avoid-zombie  8.8-waitpid-avoid-zombie.c  Makefile  readme.md
01-apue/10-signals/: 10.2-loop.c  10.2-simple-catch-fork.c  10.2-simple-catch.c
01-apue/11-threads/: 11.13-pthread-mutex-timedlock.c  11.16-pthread-barrier-sort.c  11.2-pthread-exit-terminate-process.c  11.2-pthread-ids-fork.c  11.2-pthread-ids.c  11.3-thread-exit.c  11.4-thread-stack-memory.c  11.5-pthread-cleanup.c  Makefile  readme.md  x01-pthread_create-man.c  x02-pthread-condition-variable.c
01-apue/12-thread-control/: 12.08-recursive-mutex.c  12.16-pthread-signals.c  12.17-pthread-atfork.c  readme.md  x01-pthread-limits.c  x02-process-pthread-address.c
01-apue/14-advanced-io/: 14.1-large-noblocking-write.c  14.7-process-deadlock.c  readme.md
01-apue/include/: error.c
01-apue/x01-close-on-exec/: marks.txt  readme.md  x01-close-on-exec-off.c  x01-close-on-exec-on.c  x02-exec.c  x03-fork-inherit-fd.c
02-unpv13e/: readme.md
02-unpv13e/01-Server-Client-Using-Fork/: Makefile  readme.md  tcpClient.c  tcpServer.c
03-sockets/: readme.md
04-unix-ipc/: 01-fork-child.c  02-sigint.c  02-sigusr.c  04-pipe-foo.c  04-pipe-fork.c  04-pipe-wc.c  05-fifo-speak.c  05-fifo-tick.c  06-lock-demo.c  07-mq-jerry-rcv.c  07-mq-tom-snd.c  08-sem-demo.c  09-shm-demo.c  10-mmap-demo.c  11-unix-socket-pair.c  11-unix-socket-server.c  readme.md
05-multi-threads/: 01-thread-foo.c  02-threads-cancel.c  03-func-pointer.c  04-quicksort.c  Makefile  readme.md
06-libevent/: readme.md
07-boost/: main.cpp  readme.md
08-gdb/: gdb.md
09-web-server/: 400.html  404.html  Makefile  readme.md  server.c
10-stl/: readme.md
10-stl/functors/: main.cpp  (+1 more)
10-stl/stl/: CMakeLists.txt  readme.md  test.cpp
11-epoll/: readme.md
12-binary-io-cpp/: CMakeLists.txt  readme.md  solution.h  test.cpp
13-reserve/: CMakeLists.txt  readme.md  solution.h  test.cpp
14-chrono/: CMakeLists.txt  readme.md  solution.h  test.cpp
15-kdTree/: CMakeLists.txt  Makefile  boundedPQueue.h  kdTree.h  main.cpp  point.h  readme.md  test.cpp
15-kdTree/mnist_data/: readme.md
16-nth-element/: CMakeLists.txt  kth_element_of_sorted_arrays.cpp  readme.md  solution.h  test.cpp
17-eigen/: Eigen  Makefile  main.cpp
19-LR/src/: CMakeLists.txt  Makefile  lr.cpp  lr.h  lr.i  readme.md  test.cpp  utils.h
20-armadillo/: Makefile  main.cpp  readme.md
21-tensorflow/02-inner-product-op/: CMakeLists.txt  _inner_product_grad.py  decorator_foo.py  inner_product.cc  inner_product_grad.cc  inner_product_tests.py  readme.md  reverse_ad.py
23-queue/: CMakeLists.txt  readme.md  solution.h  test.cpp
24-grpc/: 139-word_break_2.cpp  CMakeLists.txt  greeter_client.cpp  greeter_server.cpp  main.cpp  readme.md
24-grpc/cmake/: FindGRPC.cmake
24-grpc/protos/: helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  helloworld.proto
algo/: 00-quick-sorting.cpp  01-find-one-on-repeating-number.cpp  01-find-two-no-repeating-numbers.cpp
binarySearch/: 00-binarySearch.cpp  01-find-closet-number.cpp
binarySearchTree/: CMakeLists.txt  binary_search_tree.cpp  binary_search_tree.h  test.cpp
binaryTree/: CMakeLists.txt  binary_tree.cpp  binary_tree.h  test.cpp
cgi-bin/: hello-cgi.cpp
class/: String.cpp
computing-ad/: main.cpp
cpp-cli/: create.py  create_test.py
cpp-demo/: CMakeLists.txt  readme.md  solution.h  test.cpp
dp/: 00-minSteps.cpp  01-longest-increasing-sequence.cpp  02-fabonacci-benchmar.js  02-longest-common-subsequence.cpp
elib/: CMakeLists.txt  readme.md
elib/cmake/Modules/: gmock.cmake
elib/queue/: CMakeLists.txt  queue.h
elib/queue/unit_test/: CMakeLists.txt  queue_test.cpp
googleTest/: Makefile  math.cpp  math.h  readme.md  test.cpp  testPrime.cpp
graph/: 00-detect-cycle-in-graph.cpp  01-detect-cycle-in-graphs.cpp  02-mst-tree.cpp
greedy/: 00-max-activities.cpp  01-huffman-tree.cpp  input.txt
hpc/: binary_search_bench.cpp  false_sharing.md  false_sharing_align.cpp  fast_math.cpp  foo.cpp  foo.py  foo_throughtput.cpp  latency_and_throughput.cpp  loop_unrolling.cpp  loop_unrolling.s  note.md  sum_array.cpp
kth-number/: CMakeLists.txt  readme.md  solution.h  test.cpp
makefile-tutorial/: readme.md
makefile-tutorial/01-automake-autoconf/01-example/: configure.ac
makefile-tutorial/02-cmake-tutorial/: CMakeLists.txt  main.cpp  todo.cpp  todo.h
makefile-tutorial/02-cmake-tutorial/cmake/Modules/: gmock.cmake
makefile-tutorial/02-cmake-tutorial/todocore/: CMakeLists.txt  todo.cpp  todo.h
makefile-tutorial/02-cmake-tutorial/todocore/unit_test/: CMakeLists.txt  todo_test.cpp
makefile-tutorial/06-cmake-demo04/: CMakeLists.txt  main.c  readme.md
makefile-tutorial/06-cmake-demo04/math/: CMakeLists.txt
makefile-tutorial/07-cmake-demo05/: CMakeLists.txt  main.c  readme.md
makefile-tutorial/07-cmake-demo05/math/: CMakeLists.txt  myPower.c
permutation/: main.cpp  permutation.cpp
ringbuffer/: readme.md  ringbuffer.cpp
sorting/: 00-heap-sort.cpp  Makefile
struct-copy/: CMakeLists.txt  main.c
valgrind-demo/: CMakeLists.txt  main.c  valgrind-leak-check.output.txt
x02-c11/: 01_function_object.md
x04-atomics/: linked_list.cpp  readme.md  semaphore.h  spinlock_bench.cpp  spinlock_mutex.cpp
(+138 files in other folders)
